# ChatDelta

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  README.md  WISHLIST.md
.claude/: settings.local.json
.github/workflows/: ci.yml
chatdelta-rs/: Cargo.toml
chatdelta-rs/src/: lib.rs
docs/: CNAME  diagram.mmd  index.md
src/: lib.rs  logger.rs  main.rs  metrics.rs  test_args.rs  tui.rs
tests/: cli.rs  tui.rs
