[package]
name = "chatdelta-base"
version = "0.3.3"
edition = "2021"
description = "ChatDelta base repository - includes both CLI and library components"
license = "MIT"
repository = "https://github.com/ChatDelta/chatdelta"
keywords = ["ai", "openai", "gemini", "claude", "api"]
categories = ["api-bindings", "web-programming::http-client"]

# TUI binary
[[bin]]
name = "chatdelta"
path = "src/main.rs"

[lib]
name = "chatdelta_base"
path = "src/lib.rs"

[dependencies]
chatdelta = "0.6.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TUI dependencies for ncurses-style terminal UI
crossterm = "0.27"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
# Logging dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
